layout/base/PresShell.h
@@ -1798,7 +1798,28 @@ class PresShell final : public nsStubDocumentObserver,
 #endif
   }
 
-  void PushCurrentEventInfo(nsIFrame* aFrame, nsIContent* aContent);
+  struct EventTargetInfo {
+    EventTargetInfo() = default;
+    EventTargetInfo(nsIFrame* aFrame, nsIContent* aContent)
+        : mFrame(aFrame), mContent(aContent) {}
+
+    [[nodiscard]] bool IsSet() const { return mFrame || mContent; }
+    void Clear() {
+      mFrame = nullptr;
+      mContent = nullptr;
+    }
+    void ClearFrame() { mFrame = nullptr; }
+    void SetFrameAndContent(nsIFrame* aFrame, nsIContent* aContent) {
+      mFrame = aFrame;
+      mContent = aContent;
+    }
+
+    nsIFrame* mFrame = nullptr;
+    nsCOMPtr<nsIContent> mContent;
+  };
+
+  void PushCurrentEventInfo(const EventTargetInfo& aInfo);
+  void PushCurrentEventInfo(EventTargetInfo&& aInfo);
   void PopCurrentEventInfo();
   nsIContent* GetCurrentEventContent();
 
@@ -2616,7 +2637,8 @@ class PresShell final : public nsStubDocumentObserver,
     nsresult HandleRetargetedEvent(WidgetGUIEvent* aGUIEvent,
                                    nsEventStatus* aEventStatus,
                                    nsIContent* aTarget) {
-      AutoCurrentEventInfoSetter eventInfoSetter(*this, nullptr, aTarget);
+      AutoCurrentEventInfoSetter eventInfoSetter(
+          *this, EventTargetInfo(nullptr, aTarget));
       if (!mPresShell->GetCurrentEventFrame()) {
         return NS_OK;
       }
@@ -2819,22 +2841,30 @@ class PresShell final : public nsStubDocumentObserver,
           : mEventHandler(aEventHandler) {
         MOZ_DIAGNOSTIC_ASSERT(!mEventHandler.mCurrentEventInfoSetter);
         mEventHandler.mCurrentEventInfoSetter = this;
-        mEventHandler.mPresShell->PushCurrentEventInfo(nullptr, nullptr);
+        mEventHandler.mPresShell->PushCurrentEventInfo(EventTargetInfo());
       }
-      AutoCurrentEventInfoSetter(EventHandler& aEventHandler, nsIFrame* aFrame,
-                                 nsIContent* aContent)
+      AutoCurrentEventInfoSetter(EventHandler& aEventHandler,
+                                 const EventTargetInfo& aInfo)
           : mEventHandler(aEventHandler) {
         MOZ_DIAGNOSTIC_ASSERT(!mEventHandler.mCurrentEventInfoSetter);
         mEventHandler.mCurrentEventInfoSetter = this;
-        mEventHandler.mPresShell->PushCurrentEventInfo(aFrame, aContent);
+        mEventHandler.mPresShell->PushCurrentEventInfo(aInfo);
+      }
+      AutoCurrentEventInfoSetter(EventHandler& aEventHandler,
+                                 EventTargetInfo&& aInfo)
+          : mEventHandler(aEventHandler) {
+        MOZ_DIAGNOSTIC_ASSERT(!mEventHandler.mCurrentEventInfoSetter);
+        mEventHandler.mCurrentEventInfoSetter = this;
+        mEventHandler.mPresShell->PushCurrentEventInfo(
+            std::forward<EventTargetInfo>(aInfo));
       }
       AutoCurrentEventInfoSetter(EventHandler& aEventHandler,
                                  EventTargetData& aEventTargetData)
           : mEventHandler(aEventHandler) {
         MOZ_DIAGNOSTIC_ASSERT(!mEventHandler.mCurrentEventInfoSetter);
         mEventHandler.mCurrentEventInfoSetter = this;
-        mEventHandler.mPresShell->PushCurrentEventInfo(
-            aEventTargetData.GetFrame(), aEventTargetData.GetContent());
+        mEventHandler.mPresShell->PushCurrentEventInfo(EventTargetInfo(
+            aEventTargetData.GetFrame(), aEventTargetData.GetContent()));
       }
       ~AutoCurrentEventInfoSetter() {
         mEventHandler.mPresShell->PopCurrentEventInfo();
@@ -3005,10 +3035,8 @@ class PresShell final : public nsStubDocumentObserver,
   a11y::DocAccessible* mDocAccessible;
 #endif  // #ifdef ACCESSIBILITY
 
-  nsIFrame* mCurrentEventFrame;
-  nsCOMPtr<nsIContent> mCurrentEventContent;
-  nsTArray<nsIFrame*> mCurrentEventFrameStack;
-  nsCOMArray<nsIContent> mCurrentEventContentStack;
+  EventTargetInfo mCurrentEventTarget;
+  nsTArray<EventTargetInfo> mCurrentEventTargetStack;
   // Set of frames that we should mark with NS_FRAME_HAS_DIRTY_CHILDREN after
   // we finish reflowing mCurrentReflowRoot.
   nsTHashSet<nsIFrame*> mFramesToDirty;
